@@ -12,7 +12,7 @@ dave@dabeaz.com<br>
 </b>
 
 <p>
-<b>PLY Version: 2.3</b>
+<b>PLY Version: 2.4</b>
 <p>
 
 <!-- INDEX -->
